AB#37216: Fix horizontal overflow error on large terminal route lists (#413)

--- a/src/components/stopPoster/stopPoster.css
+++ b/src/components/stopPoster/stopPoster.css
@@ -34,12 +34,12 @@
 
 .left {
   composes: column;
-  width: 689px;
+  width: 639px;
 }
 
 .leftStretched {
   composes: column;
-  width: 820px;
+  width: 780px;
 }
 
 .right {
